--- a/serde_with/Cargo.toml
+++ b/serde_with/Cargo.toml
@@ -49,11 +49,13 @@ glob = "0.3.0"
 mime = "0.3.16"
 pretty_assertions = "1.0.0"
 regex = {version = "1.3.9", default-features = false, features = ["std"]}
+rmp-serde = "0.15.5"
 ron = "0.7"
 serde-xml-rs = "0.5.0"
 serde_derive = "1.0.122"
 serde_json = {version = "1.0.25", features = ["preserve_order"]}
 serde_test = "1.0.124"
+serde_yaml = "0.8.21"
 version-sync = "0.9.1"
 
 [[test]]
