Remove most actions-rs actions because they are unmaintained
Most actions in the actions-rs organizations were last updated more than a year ago meaning they are effectivly unmaintained.
Remove the actions and call rustup and cargo manually.

--- a/.github/workflows/audit.yaml
+++ b/.github/workflows/audit.yaml
@@ -12,6 +12,11 @@ on:
     - trying
   schedule:
     - cron: '0 0 * * *'
+
+# Allow the action to post about found problems
+permissions:
+  issues: write
+
 jobs:
   security_audit:
     name: Rustsec Audit
