--- a/.github/workflows/publish-crates-io.yaml
+++ b/.github/workflows/publish-crates-io.yaml
@@ -11,11 +11,12 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/v')
     steps:
       - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: stable
-          override: true
+      - name: "Install/Update the Rust version"
+        run: |
+          rustup toolchain install stable --profile minimal
+          rustup default stable
+          cargo --version
+          rustc --version
       - name: Get version from tag
         id: tag_name
         run: |
@@ -50,11 +51,11 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/macros-v')
     steps:
       - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: stable
-          override: true
+      - name: "Install/Update the Rust version"
+        run: rustup toolchain install stable --profile minimal
+          rustup default stable
+          cargo --version
+          rustc --version
       - name: Get version from tag
         id: tag_name
         run: |
