--- a/.github/workflows/publish-crates-io.yaml
+++ b/.github/workflows/publish-crates-io.yaml
@@ -92,16 +92,16 @@ jobs:
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/content-v')
     steps:
-      - uses: actions/checkout@v2.3.4
-      - uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: stable
-          override: true
+      - uses: actions/checkout@v2
+      - name: "Install/Update the Rust version"
+        run: rustup toolchain install stable --profile minimal
+          rustup default stable
+          cargo --version
+          rustc --version
       - name: Get version from tag
         id: tag_name
         run: |
-          echo ::set-output name=current_version::${GITHUB_REF#refs/tags/macros-v}
+          echo ::set-output name=current_version::${GITHUB_REF#refs/tags/content-v}
         shell: bash
       - name: Get Changelog Entry
         id: changelog_reader
@@ -110,15 +110,14 @@ jobs:
           version: ${{ steps.tag_name.outputs.current_version }}
           path: ./serde_content/CHANGELOG.md
       - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
+        uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           # This pulls from the "Get Changelog Entry" step above, referencing it's ID to get its outputs object.
           # See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-          tag_name: "macros-v${{ steps.changelog_reader.outputs.version }}"
-          release_name: "serde_content v${{ steps.changelog_reader.outputs.version }}"
+          tag_name: "content-v${{ steps.changelog_reader.outputs.version }}"
+          name: "serde_content v${{ steps.changelog_reader.outputs.version }}"
           body: ${{ steps.changelog_reader.outputs.changes }}
           prerelease: ${{ steps.changelog_reader.outputs.status == 'prereleased' }}
           draft: ${{ steps.changelog_reader.outputs.status == 'unreleased' }}
