--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,6 +11,7 @@ on:
   # Test once per week: Monday at 00:00
   schedule:
     - cron: "0 0 * * 1"
+permissions: read-all
 
 env:
   CARGO_INCREMENTAL: 0
