Add a problem matcher for Rust
This integrates the clippy and rustfmt error messages better into
GitHub. Messages will be shown at the line triggering it.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,6 +35,7 @@ jobs:
           rustup default ${{ matrix.rust }}
           cargo --version
           rustc --version
+      - run: echo "::add-matcher::.github/rust.json"
       - uses: Swatinem/rust-cache@v1
       - name: clippy "No Default Features" (${{ matrix.os }} / ${{ matrix.rust }})
         run: cargo clippy --workspace --no-default-features --all-targets
@@ -58,6 +59,7 @@ jobs:
           rustup default ${{ matrix.rust }}
           cargo --version
           rustc --version
+      - run: echo "::add-matcher::.github/rust.json"
       - name: Rustfmt Check (${{ matrix.rust }})
         run: cargo fmt --all -- --check
 
@@ -80,6 +82,7 @@ jobs:
           rustup default ${{ matrix.rust }}
           cargo --version
           rustc --version
+      - run: echo "::add-matcher::.github/rust.json"
       - uses: Swatinem/rust-cache@v1
 
       # Build the project
