--- a/serde_with/Cargo.toml
+++ b/serde_with/Cargo.toml
@@ -43,6 +43,7 @@ rustversion = "1.0.0"
 serde = {version = "1.0.122", features = ["derive"]}
 serde_json = {version = "1.0.1", optional = true}
 serde_with_macros = {path = "../serde_with_macros", version = "1.5.2", optional = true}
+time_0_3 = {package = "time", version = "~0.3", optional = true}
 
 [dev-dependencies]
 expect-test = "1.0.0"
