--- a/serde_with/Cargo.toml
+++ b/serde_with/Cargo.toml
@@ -43,7 +43,7 @@ rustversion = "1.0.0"
 serde = {version = "1.0.122", features = ["derive"]}
 serde_json = {version = "1.0.1", optional = true}
 serde_with_macros = {path = "../serde_with_macros", version = "1.5.2", optional = true}
-time_0_3 = {package = "time", version = "~0.3", optional = true}
+time_0_3 = {package = "time", version = "~0.3", optional = true, features = ["serde-well-known"]}
 
 [dev-dependencies]
 expect-test = "1.0.0"
@@ -89,6 +89,11 @@ required-features = ["json", "macros"]
 name = "serde_as"
 path = "tests/serde_as/lib.rs"
 required-features = ["macros"]
+
+[[test]]
+name = "time_0_3"
+path = "tests/time_0_3.rs"
+required-features = ["macros", "time_0_3"]
 
 [[test]]
 name = "derives"
