--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -8,7 +8,7 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     && apt-get -y install --no-install-recommends lld python3-pip \
     && rustup update \
     && rustup toolchain install nightly --profile minimal --component clippy,rustfmt \
-    && pip3 install --user --no-cache-dir pre-commit
+    && pip3 install --no-cache-dir pre-commit
 COPY config /root/.cargo/config
 RUN cargo install --locked bacon cargo-readme \
     && rm -rf ~/.cargo/registry
