Package tests in crates
Add tests back to the crates. This allows other to run them as part of
crater or for building distribution packages. Remove the compiler
errormessages tests, since they are fragile and might break with rust
upgrades.

--- a/serde_with_macros/Cargo.toml
+++ b/serde_with_macros/Cargo.toml
@@ -13,7 +13,15 @@ license = "MIT OR Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/jonasbb/serde_with/"
 
-include = ["src/**/*", "LICENSE-*", "README.md", "CHANGELOG.md"]
+include = [
+    "src/**/*",
+    "tests/**/*",
+    # These tests are a bit more volatile as future compiler upgrade might break them
+    "!tests/compile-fail/**",
+    "LICENSE-*",
+    "README.md",
+    "CHANGELOG.md",
+]
 
 [lib]
 proc-macro = true
