--- a/serde_with/Cargo.toml
+++ b/serde_with/Cargo.toml
@@ -17,7 +17,7 @@ license = "MIT OR Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/jonasbb/serde_with"
 
-include = ["src/**/*", "LICENSE-*", "README.*", "CHANGELOG.md"]
+include = ["src/**/*", "tests/**/*", "LICENSE-*", "README.md", "CHANGELOG.md"]
 
 [badges]
 maintenance = {status = "actively-developed"}
@@ -103,4 +103,3 @@ rustdoc-args = [
     # https://github.com/rust-lang/rust/pull/84176
     "-Zunstable-options", "--generate-link-to-definition"
 ]
-
