--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -2,5 +2,6 @@
 
 # format_code_in_doc_comments = true
 # format_strings = true
-imports_granularity = "Module"
+imports_granularity = "Crate"
+group_imports = "One"
 use_field_init_shorthand = true
