--- a/.github/workflows/scorecards-analysis.yml
+++ b/.github/workflows/scorecards-analysis.yml
@@ -1,11 +1,12 @@
 name: Scorecards supply-chain security
 on:
-  # Only the default branch is supported.
-  branch_protection_rule:
-  schedule:
-    - cron: '22 12 * * 4'
-  push:
-    branches: [ master ]
+  workflow_dispatch:
+#  # Only the default branch is supported.
+#  branch_protection_rule:
+#  schedule:
+#    - cron: '22 12 * * 4'
+#  push:
+#    branches: [ master ]
 
 # Declare default permissions as read only.
 permissions: read-all
