Fix typos and grammar mistakes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,34 +1,40 @@
 {
     "cSpell.words": [
-        "Challonge",
-        "Deque",
-        "Deserialization",
-        "Deserializes",
-        "MSRV",
-        "Milli",
-        "NANOS",
         "accu",
+        "binhex",
         "btreemap",
         "btreeset",
         "chrono",
         "clippy",
         "codecov",
         "concat",
-        "datatypes",
         "datetime",
         "deps",
+        "Deque",
+        "deserializable",
+        "Deserialization",
+        "Deserializes",
         "elems",
         "fromstr",
         "hasher",
         "hashset",
         "impls",
+        "indexmap",
         "linkedlist",
+        "markazmierczak",
+        "Milli",
+        "MSRV",
+        "NANOS",
         "newtype",
         "nsecs",
+        "rustdoc",
+        "rustfmt",
+        "RUSTSEC",
         "rustversion",
         "serde",
         "serde's",
         "serializable",
+        "serializers",
         "struct",
         "structs",
         "subsec",
@@ -38,6 +44,8 @@
         "subsecs",
         "systemtime",
         "trybuild",
+        "Uninit",
+        "Unpadded",
         "vecdeque"
     ],
     "cSpell.enableFiletypes": [
