--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -27,24 +27,22 @@
             "**/target/**": true
         },
 
+        // List of features to activate. Set this to "all" to pass --all-features to cargo.
+        "rust-analyzer.cargo.features": "all",
         // Cargo command to use for cargo check.
         "rust-analyzer.checkOnSave.command": "clippy",
-        // Enable support for procedural macros, implies #rust-analyzer.cargo.runBuildScripts#.
-        "rust-analyzer.procMacro.enable": true,
-        // Activate all available features (--all-features).
-        "rust-analyzer.cargo.allFeatures": true,
         // Check all targets and tests (--all-targets).
         "rust-analyzer.checkOnSave.allTargets": true,
         // The path structure for newly inserted paths to use.
         //
         // self: Insert import paths relative to the current module, using up to one `super` prefix
         // if the parent module contains the requested item. Prefixes `self` in front of the path if it starts with a module.
-        "rust-analyzer.assist.importPrefix": "self",
+        "rust-analyzer.imports.prefix": "self",
         // How imports should be grouped into use statements.
         // module: Merge imports from the same module into a single use statement. Conversely, imports from different modules are split into separate statements.
-        "rust-analyzer.assist.importGranularity": "module",
+        "rust-analyzer.imports.granularity.group": "crate",
         // Group inserted imports by the following order. Groups are separated by newlines.
-        "rust-analyzer.assist.importGroup": false,
+        "rust-analyzer.imports.group.enable": false,
     },
 
     // Add the IDs of extensions you want installed when the container is created.
@@ -52,7 +50,7 @@
         "cschleiden.vscode-github-actions",
         "github.codespaces",
         "github.vscode-pull-request-github",
-        "matklad.rust-analyzer",
+        "rust-lang.rust-analyzer",
         "ms-vsliveshare.vsliveshare",
         "redhat.vscode-yaml",
         "tamasfe.even-better-toml",
