--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -62,7 +62,6 @@ jobs:
         # breakage occurs in intermediate versions.
         # IMPORTANT: Synchronize the MSRV with the Cargo.toml values.
         rust: ["1.53", "1.55", "1.60", "stable", "beta", "nightly"]
-        crate: ["serde_with", "serde_with_macros", "serde_with_test"]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
@@ -72,24 +71,24 @@ jobs:
           toolchain: ${{ matrix.rust }}
 
       # Build the project
-      - name: "Build (${{ matrix.os }} / ${{ matrix.rust }} / Crate ${{ matrix.crate }})"
+      - name: "Build (${{ matrix.os }} / ${{ matrix.rust }})"
         run: cargo build --all-features --all-targets
 
       # The tests are split into build and run steps, to see the time impact of each
       # cargo test --all-targets does NOT run doctests
       # since doctests are important this should not be added
       # https://github.com/rust-lang/cargo/issues/6669
-      - name: "Test Build (No Default Features / ${{ matrix.os }} / ${{ matrix.rust }} / Crate ${{ matrix.crate }})"
+      - name: "Test Build (No Default Features / ${{ matrix.os }} / ${{ matrix.rust }})"
         run: cargo test --no-default-features --no-run
-      - name: "Test Run (No Default Features / ${{ matrix.os }} / ${{ matrix.rust }} / Crate ${{ matrix.crate }})"
+      - name: "Test Run (No Default Features / ${{ matrix.os }} / ${{ matrix.rust }})"
         run: cargo test --no-default-features --no-fail-fast
-      - name: "Test Build (Default Features / ${{ matrix.os }} / ${{ matrix.rust }} / Crate ${{ matrix.crate }})"
+      - name: "Test Build (Default Features / ${{ matrix.os }} / ${{ matrix.rust }})"
         run: cargo test --no-run
-      - name: "Test Run (Default Features / ${{ matrix.os }} / ${{ matrix.rust }} / Crate ${{ matrix.crate }})"
+      - name: "Test Run (Default Features / ${{ matrix.os }} / ${{ matrix.rust }})"
         run: cargo test --no-fail-fast
-      - name: "Test Build (All Features / ${{ matrix.os }} / ${{ matrix.rust }} / Crate ${{ matrix.crate }})"
+      - name: "Test Build (All Features / ${{ matrix.os }} / ${{ matrix.rust }})"
         run: cargo test --all-features  --no-run
-      - name: "Test Run (All Features / ${{ matrix.os }} / ${{ matrix.rust }} / Crate ${{ matrix.crate }})"
+      - name: "Test Run (All Features / ${{ matrix.os }} / ${{ matrix.rust }})"
         run: cargo test --all-features --no-default-features --no-fail-fast
 
       - name: Run cargo-tarpaulin
