--- a/serde_with/Cargo.toml
+++ b/serde_with/Cargo.toml
@@ -8,7 +8,7 @@ name = "serde_with"
 rust-version = "1.53"
 version = "1.14.0"
 
-categories = ["encoding"]
+categories = ["encoding", "no-std"]
 description = "Custom de/serialization functions for Rust's serde"
 documentation = "https://docs.rs/serde_with/"
 edition = "2018"
