--- a/serde_with/Cargo.toml
+++ b/serde_with/Cargo.toml
@@ -26,8 +26,8 @@ maintenance = {status = "actively-developed"}
 [features]
 default = ["std", "macros"]
 
-alloc = ["serde/alloc"]
-base64 = ["base64_crate"]
+alloc = ["serde/alloc", "base64_crate?/alloc"]
+base64 = ["base64_crate", "alloc"]
 chrono = ["chrono_crate"]
 guide = ["doc-comment", "macros"]
 indexmap = ["indexmap_crate"]
@@ -37,7 +37,7 @@ std = ["alloc", "serde/std"]
 
 # When adding new optional dependencies update the documentation in feature-flags.md
 [dependencies]
-base64_crate = {package = "base64", version = "0.13.0", optional = true}
+base64_crate = {package = "base64", version = "0.13.0", optional = true, default-features = false}
 chrono_crate = {package = "chrono", version = "0.4.1", features = ["clock", "serde", "std"], optional = true, default-features = false}
 doc-comment = {version = "0.3.3", optional = true}
 hex = {version = "0.4.2", optional = true}
@@ -48,7 +48,7 @@ serde_with_macros = {path = "../serde_with_macros", version = "1.5.2", optional 
 time_0_3 = {package = "time", version = "~0.3", optional = true, features = ["serde-well-known"]}
 
 [dev-dependencies]
-expect-test = "1.0.0"
+expect-test = "1.3.0"
 fnv = "1.0.6"
 glob = "0.3.0"
 mime = "0.3.16"
