--- a/serde_with/Cargo.toml
+++ b/serde_with/Cargo.toml
@@ -26,19 +26,19 @@ maintenance = {status = "actively-developed"}
 [features]
 default = ["std", "macros"]
 
-alloc = ["serde/alloc", "base64_crate?/alloc"]
+alloc = ["serde/alloc", "base64_crate?/alloc", "chrono_crate?/alloc"]
 base64 = ["base64_crate", "alloc"]
 chrono = ["chrono_crate"]
 guide = ["doc-comment", "macros"]
 indexmap = ["indexmap_crate"]
 json = ["serde_json"]
 macros = ["serde_with_macros"]
-std = ["alloc", "serde/std"]
+std = ["alloc", "chrono_crate?/clock", "chrono_crate?/std", "serde/std"]
 
 # When adding new optional dependencies update the documentation in feature-flags.md
 [dependencies]
 base64_crate = {package = "base64", version = "0.13.0", optional = true, default-features = false}
-chrono_crate = {package = "chrono", version = "0.4.1", features = ["clock", "serde", "std"], optional = true, default-features = false}
+chrono_crate = {package = "chrono", version = "0.4.1", optional = true, default-features = false, features = ["serde"]}
 doc-comment = {version = "0.3.3", optional = true}
 hex = {version = "0.4.2", optional = true}
 indexmap_crate = {package = "indexmap", version = "1.8", features = ["serde-1"], optional = true}
