Enable `std` when generating the user guide

--- a/serde_with/Cargo.toml
+++ b/serde_with/Cargo.toml
@@ -29,7 +29,7 @@ default = ["std", "macros"]
 alloc = ["serde/alloc", "base64_crate?/alloc", "chrono_crate?/alloc"]
 base64 = ["base64_crate", "alloc"]
 chrono = ["chrono_crate"]
-guide = ["doc-comment", "macros"]
+guide = ["doc-comment", "macros", "std"]
 indexmap = ["indexmap_crate"]
 json = ["serde_json"]
 macros = ["serde_with_macros"]
