--- a/serde_with/Cargo.toml
+++ b/serde_with/Cargo.toml
@@ -26,13 +26,13 @@ maintenance = {status = "actively-developed"}
 [features]
 default = ["std", "macros"]
 
-alloc = ["serde/alloc", "base64_crate?/alloc", "chrono_crate?/alloc", "hex_crate?/alloc"]
+alloc = ["serde/alloc", "base64_crate?/alloc", "chrono_crate?/alloc", "hex_crate?/alloc", "serde_json?/alloc"]
 base64 = ["base64_crate", "alloc"]
 chrono = ["chrono_crate"]
 guide = ["doc-comment", "macros", "std"]
 hex = ["hex_crate", "alloc"]
 indexmap = ["indexmap_crate", "alloc"]
-json = ["serde_json"]
+json = ["serde_json", "alloc"]
 macros = ["serde_with_macros"]
 std = ["alloc", "chrono_crate?/clock", "chrono_crate?/std", "indexmap_crate?/std", "serde/std"]
 
@@ -44,7 +44,7 @@ doc-comment = {version = "0.3.3", optional = true}
 hex_crate = {package = "hex", version = "0.4.2", optional = true, default-features = false}
 indexmap_crate = {package = "indexmap", version = "1.8", optional = true, default-features = false, features = ["serde-1"]}
 serde = {version = "1.0.122", default-features = false, features = ["derive"]}
-serde_json = {version = "1.0.1", optional = true}
+serde_json = {version = "1.0.1", optional = true, default-features = false}
 serde_with_macros = {path = "../serde_with_macros", version = "1.5.2", optional = true}
 time_0_3 = {package = "time", version = "~0.3", optional = true, features = ["serde-well-known"]}
 
