--- a/serde_with/Cargo.toml
+++ b/serde_with/Cargo.toml
@@ -26,7 +26,7 @@ maintenance = {status = "actively-developed"}
 [features]
 default = ["std", "macros"]
 
-alloc = ["serde/alloc", "base64_crate?/alloc", "chrono_crate?/alloc", "hex_crate?/alloc", "serde_json?/alloc"]
+alloc = ["serde/alloc", "base64_crate?/alloc", "chrono_crate?/alloc", "hex_crate?/alloc", "serde_json?/alloc", "time_0_3_crate?/alloc"]
 base64 = ["base64_crate", "alloc"]
 chrono = ["chrono_crate"]
 guide = ["doc-comment", "macros", "std"]
@@ -34,7 +34,8 @@ hex = ["hex_crate", "alloc"]
 indexmap = ["indexmap_crate", "alloc"]
 json = ["serde_json", "alloc"]
 macros = ["serde_with_macros"]
-std = ["alloc", "chrono_crate?/clock", "chrono_crate?/std", "indexmap_crate?/std", "serde/std"]
+std = ["alloc", "chrono_crate?/clock", "chrono_crate?/std", "indexmap_crate?/std", "serde/std", "time_0_3_crate?/std", "time_0_3_crate?/serde-well-known"]
+time_0_3 = ["time_0_3_crate"]
 
 # When adding new optional dependencies update the documentation in feature-flags.md
 [dependencies]
@@ -46,7 +47,7 @@ indexmap_crate = {package = "indexmap", version = "1.8", optional = true, defaul
 serde = {version = "1.0.122", default-features = false, features = ["derive"]}
 serde_json = {version = "1.0.1", optional = true, default-features = false}
 serde_with_macros = {path = "../serde_with_macros", version = "1.5.2", optional = true}
-time_0_3 = {package = "time", version = "~0.3", optional = true, features = ["serde-well-known"]}
+time_0_3_crate = {package = "time", version = "~0.3", optional = true, default-features = false}
 
 [dev-dependencies]
 expect-test = "1.3.0"
