Add a test showing how cfg_eval can be used to gate serde_with attributes
So far the story for cfg-gating serde_with attributes has not been
great, as shown in #331 or #355.
This adds a test showing how cfg_eval can be used to gate serde_with.

Part of #607

--- a/serde_with_test/Cargo.toml
+++ b/serde_with_test/Cargo.toml
@@ -8,6 +8,7 @@ rust-version = "1.60"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+cfg_eval = "0.1.2"
 s = {package = "serde", version = "1.0.75", features = ["derive"]}
 s_json = {package = "serde_json", version = "1.0.59"}
 s_with = {package = "serde_with", path = "../serde_with"}
