--- a/serde_with_macros/Cargo.toml
+++ b/serde_with_macros/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 authors = ["Jonas Bushart"]
 name = "serde_with_macros"
-rust-version = "1.61"
+rust-version = "1.63"
 version = "3.1.0"
 
 categories = ["encoding"]
@@ -28,6 +28,9 @@ proc-macro = true
 
 [badges]
 maintenance = {status = "actively-developed"}
+
+[features]
+schemars_0_8 = []
 
 [dependencies]
 darling = "0.20.0"
