Tweak cargo release config
Change default commit message.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ resolver = "2"
 
 [workspace.metadata.release]
 consolidate-commits = true
+pre-release-commit-message = "Bump version to v{{version}}"
 publish = false
 push = false
 shared-version = true
