Add support for emitting #[schemars(...)] attributes to #[serde_as]
This commit adds support for emitting

    #[schemars(with = "::serde_with::Schema<T, ...>")]

field annotations when any of the following are true:
- there is a #[derive(JsonSchema)] attribute, or,
- the user explicitly requests it via #[serde_as(schemars)]

This requires a bunch of extra work to properly scan for a few different
possible paths to JsonSchema (see the added docs for details) and also
to properly handle the case where the derive is within a #[cfg_attr]. eg

    #[cfg_attr(feature = "blah", derive(schemars::JsonSchema))]

While rustc will evaluate the cfgs for attributes declared by derive
macros unfortunately it does not do the same for attribute macros so we
need to do it ourselves.

The code here started from #623 as a base and all changes have been made
on top of that.

Co-Authored-By: Jonas Bushart <jonas@bushart.org>

--- a/serde_with_macros/Cargo.toml
+++ b/serde_with_macros/Cargo.toml
@@ -32,6 +32,9 @@ proc-macro = true
 [badges]
 maintenance = {status = "actively-developed"}
 
+[features]
+schemars_0_8 = []
+
 [dependencies]
 darling = "0.20.0"
 proc-macro2 = "1.0.1"
