a few more spelling and lints

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,10 +32,15 @@ cast_possible_truncation = "allow"
 cast_possible_wrap = "allow"
 cast_precision_loss = "allow"
 cast_sign_loss = "allow"
+items_after_statements = "allow"
+linkedlist = "allow"
 match_same_arms = "allow"
 match_wildcard_for_single_variants = "allow"
 missing_errors_doc = "allow"
+missing_panics_doc = "allow"
 module_name_repetitions = "allow"
+needless_pass_by_value = "allow"
+needless_raw_string_hashes = "allow"
 redundant_closure_for_method_calls = "allow"
 similar_names = "allow"
 too_many_lines = "allow"
