Apply some changes from #669
Co-Authored-by: Yuri Astrakhan <YuriAstrakhan@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,15 @@ push = false
 shared-version = true
 sign-tag = true
 tag = false
+
+[workspace.lints.rust]
+
+[workspace.lints.clippy]
+# Checks for usage of `cloned()` on an `Iterator` or `Option` where `copied()` could be used instead.
+cloned_instead_of_copied = "warn"
+# Checks for literal calls to `Default::default()`.
+default_trait_access = "warn"
+# Checks for the presence of `_`, `::` or camel-case words outside ticks in documentation.
+doc_markdown = "warn"
+# Checks for closures which only invoke a method on the closure argument and can be replaced by referencing the method directly.
+redundant_closure_for_method_calls = "warn"
