Light spell checking

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,25 +14,31 @@
 
     "cSpell.words": [
         "accu",
+        "alloc",
         "binhex",
+        "Boollike",
         "btreemap",
         "btreeset",
         "chrono",
         "clippy",
         "codecov",
         "concat",
+        "constgeneric",
         "datetime",
         "deps",
         "Deque",
         "deserializable",
         "Deserialization",
         "Deserializes",
+        "docsrs",
         "elems",
         "fromstr",
+        "hashbrown",
         "hasher",
         "hashset",
         "impls",
         "indexmap",
+        "jsonschema",
         "linkedlist",
         "markazmierczak",
         "Milli",
@@ -41,13 +47,16 @@
         "newtype",
         "nsecs",
         "rustdoc",
+        "Rustexplorer",
         "rustfmt",
         "RUSTSEC",
         "rustversion",
+        "schemars",
         "serde",
         "serde's",
         "serializable",
         "serializers",
+        "smoketest",
         "struct",
         "structs",
         "subsec",
