Switch installation of pre-commit to postCreateCommand

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -5,8 +5,7 @@ FROM mcr.microsoft.com/devcontainers/rust:1
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     && apt-get -y install --no-install-recommends lld python3-pip \
     && rustup update \
-    && rustup toolchain install nightly --profile minimal --component clippy,rustfmt \
-    && pip3 install --no-cache-dir pre-commit
+    && rustup toolchain install nightly --profile minimal --component clippy,rustfmt
 COPY config /root/.cargo/config
 RUN cargo install --locked bacon cargo-readme \
     && rm -rf ~/.cargo/registry
