Address problems with unused_qualifications
Change some code places to fix the warning.
Disable the warning in the Cargo.toml file because it causes problems
with the darling derives used for the macro code.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,8 @@ trivial_casts = "warn"
 trivial_numeric_casts = "warn"
 unused_extern_crates = "warn"
 unused_import_braces = "warn"
-unused_qualifications = "warn"
+# Causes problems with the darling derives in the serde_with_macros crate.
+# unused_qualifications = "warn"
 variant_size_differences = "warn"
 # Unsafe code is needed for array initialization using MaybeUninit.
 # unsafe_code = "forbid"
