--- a/.github/workflows/audit.yaml
+++ b/.github/workflows/audit.yaml
@@ -4,14 +4,13 @@ on:
     paths:
       - 'Cargo.toml'
       - '**/Cargo.toml'
-  # Bors related branches
+      - 'Cargo.lock'
   push:
     branches:
     - master
-    - staging
-    - trying
   schedule:
     - cron: '0 0 * * *'
+  workflow_dispatch:
 permissions: read-all
 
 jobs:
