Move the main schemars_0_8 test file to a subdirectory
Move the utils code as well.

--- a/serde_with/Cargo.toml
+++ b/serde_with/Cargo.toml
@@ -239,7 +239,7 @@ required-features = ["alloc"]
 
 [[test]]
 name = "schemars_0_8"
-path = "tests/schemars_0_8.rs"
+path = "tests/schemars_0_8/main.rs"
 required-features = ["schemars_0_8"]
 
 [[test]]
